--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,19 @@ nav {
 	background-color: #2eb8b8;
 	padding: .2em;
 	text-align: center;
+	
 }
 
 .content {
-	background-color: green;
 	height: 500px;
 	width: auto;
 	background-color: #f2e6d9;
+}
+
+.social-media {
+	position: fixed;
+	left: 0px;
+	top: 100px;
+	background-color: #f9f2ec;
+	padding: 25px;
+}
